# Surface-Adsorption-and-Geometry-Evaluator-SAGE-

./: .gitignore  CHE_mode.py  CITATION.cff  CO2_box.cif  CO_box.cif  H2_box.cif  HCOO_box.cif  Home.py  OCHO_box.cif  README.md  common.py  pyproject.toml  requirements.txt  structure_check.py
.github/workflows/: ci.yml
app/: Home.py
app/ocp_app/core/: CHE_mode.py  ads_sites.py  adsorbml_lite_screening.py  cifgen.py  co2rr_air_summary.py  common.py  conditioning.py  gas_refs.py  interface_builder.py  oxide_descriptor.py  oxide_surface_rules.py  postprocess.py  preview.py  reporting.py  run_history.py  seeds.py  slab_reduction.py  slabify.py  slabify_backup.py  state.py  structure_check.py  structure_ops.py  surface_families.py  voc_registry.py
app/ocp_app/core/anchors/: CHE_mode.py  common.py  local_zpe.py  oxide_her.py  oxide_interface_her.py  voc_mode.py
app/ocp_app/ui/: viewers.py
ocp_app/: ads_sites.py  adsorbml_lite_screening.py  cifgen.py  gas_refs.py  run_history.py  seeds.py
ref_gas/: CH3CHO_box.cif  CH3COOH_box.cif  CH3COO_box.cif  CH3CO_box.cif  COOH_box.cif  H2O_box.cif  H2_meta.json  OH_box.cif  OOH_box.cif  O_box.cif  thermo_CO2RR.py
tests/: conftest.py  test_ads_sites.py  test_postprocess.py  test_sage_extended.py  test_seeds.py
tests/.ipynb_checkpoints/: test_postprocess-checkpoint.py  test_structure_check-checkpoint.py
