[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sage-electrocatalyst"
version = "1.0.0"
description = "Surface Adsorption and Geometry Evaluator — workflow-integrated electrocatalyst screening"
readme = "README.md"
license = {text = "AGPL-3.0"}
requires-python = ">=3.10"
authors = [
    {name = "Junhe Park", email = "p5042939@gmail.com"},
]
keywords = [
    "electrocatalysis",
    "adsorption energy",
    "HER",
    "surface screening",
    "workflow",
    "slab generation",
    "MLIP",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core
    "streamlit>=1.28",
    "numpy>=1.24",
    "pandas>=1.5",
    "torch>=2.0",

    # Atomistic simulation
    "ase>=3.22",
    "pymatgen>=2023.0",

    # ML potentials
    "chgnet>=0.3",
    "fairchem-core>=2.0",

    # Structure visualization
    "py3Dmol>=2.0",

    # Materials Project API
    "mp-api>=0.33",

    # Model access
    "huggingface_hub",
]

[project.optional-dependencies]
llm = [
    "openai>=1.0",
    "pydantic>=2.0",
]
dev = [
    "pytest>=7.0",
]

[project.urls]
Repository = "https://github.com/Junhepark/Surface-Adsorption-and-Geometry-Evaluator-SAGE-"

[tool.setuptools.packages.find]
where = ["app"]

[tool.setuptools.package-data]
ocp_app = ["**/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
